# synchronicity

./: .gitignore  README.md  pyproject.toml  run_angel_experiment.py  run_batch_sweep.py  run_cascade_sigma.py  run_comparison.py  run_full_analysis.py  run_full_comparison.py  run_full_integration.py  run_multiseed.py  run_process_test.py  run_recording.py  run_sigma_comparison.py  run_sigma_planner.py  sigma_measure.py  smoke_test.py  viz.html  viz_data.json
synchronicity/: __init__.py  active_inference.py  agents.py  angel_reward_machine.py  field.py  llm_agent.py  process_ingestion.py  recorder.py  reward_machine.py  scenarios.py  sigma_agent.py  sigma_framework.py  sigma_reward_machine.py  simulation.py  value_chain.py
